// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton /> when nested in a RadioGroup should match the snapshot for a checked radio 1`] = `
<div
  class="none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_flex width_full position_relative column_mobile_base"
>
  <div
    class="3_mobile_base 3_mobile_base 3_mobile_base none_mobile_base display_flex position_relative center_mobile_base row_mobile_base flexStart_mobile_base root_base appearance cursorPointer button"
  >
    <input
      class="block appearance input none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full height_full position_absolute appearance cursorPointer button nativeInput_default"
      name="radio"
      type="radio"
      value="1"
    />
    <div
      class="display_flex position_relative center_mobile_base center_mobile_base checkable_base appearance cursorPointer button"
    >
      <div
        class="position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 2_mobile_base 2_mobile_base 2_mobile_base 2_mobile_base pill_mobile_base checkableItem_base circle_default_base circle_outer_base"
      />
      <div
        class="position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base pill_mobile_base circle_default_base circle_inner_base"
      />
    </div>
    <label
      class="width_full appearance cursorPointer button root_base colours_neutral_base sizes_4_base"
    >
      <span
        class="textAlign_left root_base colours_neutral_base fontWeight_normal_base sizes_4_base"
      >
        radio label 1
      </span>
    </label>
  </div>
  <div
    class="3_mobile_base 3_mobile_base 3_mobile_base none_mobile_base display_flex position_relative center_mobile_base row_mobile_base flexStart_mobile_base root_base appearance cursorPointer button"
  >
    <input
      class="block appearance input none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full height_full position_absolute appearance cursorPointer button nativeInput_default"
      name="radio"
      type="radio"
      value="2"
    />
    <div
      class="display_flex position_relative center_mobile_base center_mobile_base checkable_base appearance cursorPointer button"
    >
      <div
        class="position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 2_mobile_base 2_mobile_base 2_mobile_base 2_mobile_base pill_mobile_base checkableItem_base circle_default_base circle_outer_base"
      />
      <div
        class="position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base pill_mobile_base circle_default_base circle_inner_base"
      />
    </div>
    <label
      class="width_full appearance cursorPointer button root_base colours_neutral_base sizes_4_base"
    >
      <span
        class="textAlign_left root_base colours_neutral_base fontWeight_normal_base sizes_4_base"
      >
        radio label 2
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioButton /> when nested in a RadioGroup should match the snapshot for a group of radios 1`] = `
<div
  class="none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_flex width_full position_relative column_mobile_base"
>
  <div
    class="3_mobile_base 3_mobile_base 3_mobile_base none_mobile_base display_flex position_relative center_mobile_base row_mobile_base flexStart_mobile_base root_base appearance cursorPointer button"
  >
    <input
      class="block appearance input none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full height_full position_absolute appearance cursorPointer button nativeInput_default"
      name="radio"
      type="radio"
      value="1"
    />
    <div
      class="display_flex position_relative center_mobile_base center_mobile_base checkable_base appearance cursorPointer button"
    >
      <div
        class="position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 2_mobile_base 2_mobile_base 2_mobile_base 2_mobile_base pill_mobile_base checkableItem_base circle_default_base circle_outer_base"
      />
      <div
        class="position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base pill_mobile_base circle_default_base circle_inner_base"
      />
    </div>
    <label
      class="width_full appearance cursorPointer button root_base colours_neutral_base sizes_4_base"
    >
      <span
        class="textAlign_left root_base colours_neutral_base fontWeight_normal_base sizes_4_base"
      >
        radio label 1
      </span>
    </label>
  </div>
  <div
    class="3_mobile_base 3_mobile_base 3_mobile_base none_mobile_base display_flex position_relative center_mobile_base row_mobile_base flexStart_mobile_base root_base appearance cursorPointer button"
  >
    <input
      class="block appearance input none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full height_full position_absolute appearance cursorPointer button nativeInput_default"
      name="radio"
      type="radio"
      value="2"
    />
    <div
      class="display_flex position_relative center_mobile_base center_mobile_base checkable_base appearance cursorPointer button"
    >
      <div
        class="position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 2_mobile_base 2_mobile_base 2_mobile_base 2_mobile_base pill_mobile_base checkableItem_base circle_default_base circle_outer_base"
      />
      <div
        class="position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base pill_mobile_base circle_default_base circle_inner_base"
      />
    </div>
    <label
      class="width_full appearance cursorPointer button root_base colours_neutral_base sizes_4_base"
    >
      <span
        class="textAlign_left root_base colours_neutral_base fontWeight_normal_base sizes_4_base"
      >
        radio label 2
      </span>
    </label>
  </div>
  <div
    class="3_mobile_base 3_mobile_base 3_mobile_base none_mobile_base display_flex position_relative center_mobile_base row_mobile_base flexStart_mobile_base root_base appearance cursorPointer button"
  >
    <input
      class="block appearance input none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full height_full position_absolute appearance cursorPointer button nativeInput_default"
      name="radio"
      type="radio"
      value="3"
    />
    <div
      class="display_flex position_relative center_mobile_base center_mobile_base checkable_base appearance cursorPointer button"
    >
      <div
        class="position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 2_mobile_base 2_mobile_base 2_mobile_base 2_mobile_base pill_mobile_base checkableItem_base circle_default_base circle_outer_base"
      />
      <div
        class="position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base pill_mobile_base circle_default_base circle_inner_base"
      />
    </div>
    <label
      class="width_full appearance cursorPointer button root_base colours_neutral_base sizes_4_base"
    >
      <span
        class="textAlign_left root_base colours_neutral_base fontWeight_normal_base sizes_4_base"
      >
        radio label 3
      </span>
    </label>
  </div>
  <div
    class="3_mobile_base 3_mobile_base 3_mobile_base none_mobile_base display_flex position_relative center_mobile_base row_mobile_base flexStart_mobile_base root_base appearance cursorPointer button"
  >
    <input
      class="block appearance input none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full height_full position_absolute appearance cursorPointer button nativeInput_default"
      name="radio"
      type="radio"
      value="4"
    />
    <div
      class="display_flex position_relative center_mobile_base center_mobile_base checkable_base appearance cursorPointer button"
    >
      <div
        class="position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 2_mobile_base 2_mobile_base 2_mobile_base 2_mobile_base pill_mobile_base checkableItem_base circle_default_base circle_outer_base"
      />
      <div
        class="position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base pill_mobile_base circle_default_base circle_inner_base"
      />
    </div>
    <label
      class="width_full appearance cursorPointer button root_base colours_neutral_base sizes_4_base"
    >
      <span
        class="textAlign_left root_base colours_neutral_base fontWeight_normal_base sizes_4_base"
      >
        radio label 4
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioButton /> when nested in a RadioGroup should match the snapshot for a single radio 1`] = `
<div
  class="none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_flex width_full position_relative column_mobile_base"
>
  <div
    class="3_mobile_base 3_mobile_base 3_mobile_base none_mobile_base display_flex position_relative center_mobile_base row_mobile_base flexStart_mobile_base root_base appearance cursorPointer button"
  >
    <input
      class="block appearance input none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full height_full position_absolute appearance cursorPointer button nativeInput_default"
      name="radio"
      type="radio"
      value="1"
    />
    <div
      class="display_flex position_relative center_mobile_base center_mobile_base checkable_base appearance cursorPointer button"
    >
      <div
        class="position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 2_mobile_base 2_mobile_base 2_mobile_base 2_mobile_base pill_mobile_base checkableItem_base circle_default_base circle_outer_base"
      />
      <div
        class="position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base pill_mobile_base circle_default_base circle_inner_base"
      />
    </div>
    <label
      class="width_full appearance cursorPointer button root_base colours_neutral_base sizes_4_base"
    >
      <span
        class="textAlign_left root_base colours_neutral_base fontWeight_normal_base sizes_4_base"
      >
        radio label 1
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioButton /> when nested in a RadioGroup should match the snapshot for a single radio with no value or label 1`] = `
<div
  class="none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_flex width_full position_relative column_mobile_base"
>
  <div
    class="3_mobile_base 3_mobile_base 3_mobile_base none_mobile_base display_flex position_relative center_mobile_base row_mobile_base flexStart_mobile_base root_base appearance cursorPointer button"
  >
    <input
      checked=""
      class="block appearance input none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full height_full position_absolute appearance cursorPointer button nativeInput_default nativeInput_checked"
      name="radio"
      type="radio"
      value=""
    />
    <div
      class="display_flex position_relative center_mobile_base center_mobile_base checkable_base appearance cursorPointer button"
    >
      <div
        class="position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 2_mobile_base 2_mobile_base 2_mobile_base 2_mobile_base pill_mobile_base checkableItem_base circle_default_base circle_outer_base circle_selected_base"
      />
      <div
        class="position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base pill_mobile_base circle_default_base circle_inner_base circle_selected_base circle_selectedInner_base"
      />
    </div>
    <label
      class="width_full appearance cursorPointer button root_base colours_neutral_base sizes_4_base"
    >
      <span
        class="textAlign_left root_base colours_neutral_base fontWeight_normal_base sizes_4_base"
      />
    </label>
  </div>
</div>
`;

exports[`<RadioButton /> when with component child should match the snapshot 1`] = `
<div
  class="none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_flex width_full position_relative column_mobile_base"
>
  <div
    class="3_mobile_base 3_mobile_base 3_mobile_base none_mobile_base display_flex position_relative center_mobile_base row_mobile_base flexStart_mobile_base root_base appearance cursorPointer button"
  >
    <input
      class="block appearance input none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full height_full position_absolute appearance cursorPointer button nativeInput_default"
      name="radio"
      type="radio"
      value="1"
    />
    <div
      class="display_flex position_relative center_mobile_base center_mobile_base checkable_base appearance cursorPointer button"
    >
      <div
        class="position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 2_mobile_base 2_mobile_base 2_mobile_base 2_mobile_base pill_mobile_base checkableItem_base circle_default_base circle_outer_base"
      />
      <div
        class="position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base pill_mobile_base circle_default_base circle_inner_base"
      />
    </div>
    <label
      class="width_full appearance cursorPointer button root_base colours_neutral_base sizes_4_base"
    >
      <h1
        class="root_base colours_dark_base fontWeight_bold_base sizes_8_base"
      >
        Hello checkbox
      </h1>
    </label>
  </div>
</div>
`;

exports[`<RadioButton /> when with component child should render the component child 1`] = `
<h1
  class="root_base colours_dark_base fontWeight_bold_base sizes_8_base"
>
  Hello checkbox
</h1>
`;
